# vulcano

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  AGENTS.md  CHANGELOG.md  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  pip_upload.sh  pyproject.toml  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/source/: conf.py  index.rst  vulcano.rst
docs/source/vulcano/: app.rst  core.rst
examples/: Untitled.ipynb  async_output_example.py  module_example.py  simple_example.py
examples/my_module/: my_funcs.py
requirements/: requirements.txt  test_requirements.txt
scripts/: generate_changelog.py
vulcano/: __init__.py  exceptions.py  exceptions_test.py  themes.py  vulcano_cli.py
vulcano/app/: __init__.py  background.py  background_test.py  classes.py  classes_test.py  group.py  group_test.py  lexer.py  lexer_test.py  test_classes.py  test_lexer.py
vulcano/command/: __init__.py  builtin.py  builtin_test.py  classes.py  classes_test.py  completer.py  completer_test.py  docutils.py  docutils_test.py  models.py  models_test.py  parser.py  parser_test.py  test_builtin.py  test_classes.py  test_completer.py  test_parser.py
vulcano/core/: classes.py  test_classes.py
